--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -79,6 +79,18 @@ code {
   font-family: InputLight;
 }
 
+.name-input {
+  padding: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  display: flex;
+  border-radius: 4px;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+  border: 1px solid #ddd;
+  height: 30%;
+  font-size: 1rem;
+}
+
 .inputs {
   display: grid;
   margin-top: 1%;
@@ -89,19 +101,25 @@ code {
   justify-content: center;
 }
 
-.name-input {
-  padding: 10px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+.input-pair {
   display: flex;
-  border-radius: 4px;
-  box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
-  border: 1px solid #ddd;
-  height: 30%;
-  font-size: 0.9rem;
+  justify-content: space-between;
+  margin-top: 3%;
+  margin-bottom: 3%;
+  height: 70%;
 }
 
-.input-label {
+.input {
+  padding: 0px 1.7%;
+  width: 45.5%;
+  font-size: 1rem;
+  height: 100%;
+  border-radius: 4px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  border: 1px solid #ddd;
+}
+
+.input-label{
   text-align: left;
   margin-left: 10px;
   margin-top: 2%;
@@ -110,8 +128,45 @@ code {
   color: rgb(197, 130, 139);
 }
 
-.form-controls button {
+.input-other-label {
+  text-align: left;
+  margin-left: 10px;
+  margin-top: 2%;
+  margin-bottom: 1%;
+  font-size: 1rem;
+  color: rgb(197, 130, 139);
+}
+
+.input-message-label {
+  text-align: left;
+  margin-left: 10px;
   margin-top: 1%;
+  margin-bottom: 3%;
+  font-size: 1rem;
+  color: rgb(197, 130, 139);
+}
+
+.message-input {
+  padding: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-radius: 4px;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+  border: 1px solid #ddd;
+  height: 30%;
+  font-size: 1rem;
+  width: 96%;
+  display: flex;
+  resize: none;
+}
+
+.text-input {
+  height: fit-content;
+}
+
+.form-controls button {
+  margin-top: 3%;
+  margin-bottom: 3%;
   width: 49%;
   height: 2rem;
   background-color: rgb(197, 130, 139);
@@ -142,4 +197,8 @@ code {
   background-color: transparent; /* Set the background color to transparent */
   border: none; /* Remove the border */
   font-size: 0.8rem;
+}
+
+.footer {
+  height: 40px;
 }
