updated form width

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -63,6 +63,7 @@ code {
   align-self: center;
   justify-content: center;
   width: 70%;
+  min-width: 700px;
   padding: 40px 20px;
   border-radius: 20px; /* Creates a circular border */
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
